--- a/templates/cours.html
+++ b/templates/cours.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Terminale</title>
-    <link rel="icon" href="../static/image/icon.ico">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/6990/6990855.png" type="image/png">
     {% assets 'css_main' %}
     <link rel="stylesheet" href="{{ ASSET_URL }}">
     {% endassets %}
@@ -16,7 +16,7 @@
 
 
     <header>
-        <nav>
+        <nav class="cours-search-header">
             <div class="header-link-container">
                 <a class="header-home-container" href="/">
                     <h3>Terminale
@@ -30,12 +30,23 @@
                     <img src="   https://cdn-icons-png.flaticon.com/512/2015/2015218.png ">
                 </a>
             </div>
-            <div class="header-title-container">
-                <h1>Cours</h1>
+            <div class="input-container"><input placeholder="ex: Dérivé, Bonheur..." id="search-input" class="input"
+                    name="text" type="text">
+                <button class="input-button" onclick="search()">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" id="svgContainer">
+                        <path
+                            d="M 21 3 C 11.601563 3 4 10.601563 4 20 C 4 29.398438 11.601563 37 21 37 C 24.355469 37 27.460938 36.015625 30.09375 34.34375 L 42.375 46.625 L 46.625 42.375 L 34.5 30.28125 C 36.679688 27.421875 38 23.878906 38 20 C 38 10.601563 30.398438 3 21 3 Z M 21 7 C 28.199219 7 34 12.800781 34 20 C 34 27.199219 28.199219 33 21 33 C 13.800781 33 8 27.199219 8 20 C 8 12.800781 13.800781 7 21 7 Z" />
+                    </svg>
+                </button>
             </div>
-            <div class="menu">
-                <button class="menu-right" onclick="hide_show()"><img
-                        src="https://cdn-icons-png.flaticon.com/512/2115/2115216.png"></button>
+            <div class="header-link-container">
+                <div class="header-title-container">
+                    <h1>Cours</h1>
+                </div>
+                <div class="menu">
+                    <button class="menu-right" onclick="hide_show()"><img
+                            src="https://cdn-icons-png.flaticon.com/512/2115/2115216.png"></button>
+                </div>
             </div>
         </nav>
         <div id="settings" style="opacity: 0;">
@@ -62,55 +73,37 @@
                     <li><button class=" radius-button radius4" onclick="radius4()"></button></li>
                 </ul>
             </div>
+            <div>
+                <p>Lignes</p>
+                <!-- Rounded switch -->
+                <div class="line-container">
+                    <label class="switch">
+                        <input type="checkbox" id="toggle-switch">
+                        <span class="slider round"></span>
+                    </label>
+                    <div class="line"></div>
+                </div>
+            </div>
+            <div>
+                <p>Flèches</p>
+                <!-- Rounded switch -->
+                <div class="line-container">
+                    <label class="switch">
+                        <input type="checkbox" id="toggle-switch-fleche">
+                        <span class="slider round"></span>
+                    </label>
+                    <div class="fleche">
+                        <img class="fleche_haut_settings">
+                        <img class="fleche_bas_settings">
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </header>
-    <div class="main-cours-container">
-        <div id="page_position_1" style="margin-top: 10vh;"></div>
-        <div class="box-cours-elements video-player" id="box-cours-elements-1" style="margin-bottom: 10vh;">
-            <div id="content-container" class="content-full-screen">
-                <img class="cours-element" src="https://upload.wikimedia.org/wikipedia/commons/7/71/Small_pie.svg">
-            </div>
-        </div>
-
-        <div id="page_position_2" style="margin-top: 10vh;"></div>
-        <div class="box-cours-elements video-player" id="box-cours-elements-2">
-            <div id="content-container" class="content-full-screen">
-                <video class="cours-element " controls>
-                    <source src="../static/video/video.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-            </div>
-        </div>
-
-        <div id="page_position_3" style="margin-top: 10vh;"></div>
-        <div class="box-cours-elements video-player" id="box-cours-elements-3">
-            <h2 class="cours-element">Video Révolution Fr</h2>
-            <div id="content-container">
-                <video class="cours-element video-player-small" controls>
-                    <source src="../static/video/video.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-
-                </video>
-                <p class="cours-element">TESmbofzelibfezfliezbfezihvajez,pfjeaz ov hoh veznoirz zanofezn fzeanoiefhzn
-                    nmfeioz nmpa TESmbofzelibfezfliezbfezihvajez,pfjeaz ov hoh veznoirz zanofezn fzeanoiefhzn
-                    nmfeioz nmpa TESmbofzelibfezfliezbfezihvajez,pfjeaz ov hoh veznoirz zanofezn fzeanoiefhzn
-                    nmfeioz nmpa TESmbofzelibfezfliezbfezihvajez,pfjeaz ov hoh veznoirz zanofezn fzeanoiefhzn
-                    nmfeioz nmpa</p>
-            </div>
-        </div>
+    <div class="main-cours-container" style="margin-block: 10vh;">
 
 
-        <div id="page_position_4" style="margin-top: 10vh;"></div>
-        <div class="box-cours-elements video-player" id="box-cours-elements-4">
-            <h2 class=" cours-element">Video Révolution Fr</h2>
-            <div id="content-container">
-                <video class="cours-element video-player-small" controls>
-                    <source src="../static/video/video.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-                <p class="cours-element">3</p>
-            </div>
-        </div>
 
 
     </div>
@@ -124,14 +117,14 @@
         </button>
     </div>
 
-    <div id="id-info">
+    <div id="id-info" style="visibility: hidden; padding-inline: 2vw;">
         <p id="id-info-text">1</p>
     </div>
 
 </body>
 
-<script src="../static/javascript/settings.js"></script>
 <script src="../static/javascript/cours.js"></script>
+<script src="../static/javascript/settings.js"></script>
 
 
 
