--- a/templates/interro.html
+++ b/templates/interro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Terminale</title>
-    <link rel="icon" href="../static/image/icon.ico">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/6990/6990855.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% assets 'css_main' %}
     <link rel="stylesheet" href="{{ ASSET_URL }}">
